Patch with live server

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,2 +1,3 @@
-VITE_SUPABASE_URL={{YOUR_INSTANCE_URL}}
-VITE_SUPABASE_KEY={{YOUR_ANON_KEY}}
+VITE_SUPABASE_URL={{SUPABASE_INSTANCE_URL}}
+VITE_SUPABASE_KEY={{SUPABASE_ANON_KEY}}
+VITE_SUPAFLARE_WORKER_URL={{SUPAFLARE_WORKER_URL}}
