--- a/worker/.env.example
+++ b/worker/.env.example
@@ -1,2 +1,2 @@
-SUPABASE_URL={{YOUR_INSTANCE_URL}}
-SUPABASE_KEY={{YOUR_ANON_KEY}}
+SUPABASE_URL={{SUPABASE_INSTANCE_URL}}
+SUPABASE_KEY={{SUPABASE_ANON_KEY}}
