--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^1.24.0",
+		"axios": "^0.22.0",
 		"core-js-pure": "^3.18.2",
 		"nanoid": "^3.1.29",
 		"pinia": "^2.0.0-rc.12",
