--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
 	"author": "ian <licitdev@gmail.com>",
 	"main": "dist/index.html",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "vue-tsc --noEmit && vite build",
 		"serve": "vite preview",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
