--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -12,7 +12,7 @@ defaults:
     working-directory: worker
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     name: Build & Deploy Worker
     steps:
@@ -26,6 +26,5 @@ jobs:
         uses: cloudflare/wrangler-action@1.3.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          workingDirectory: 'worker'
         env:
           CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
