--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -26,6 +26,6 @@ jobs:
         uses: cloudflare/wrangler-action@1.3.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          working-directory: 'worker'
+          workingDirectory: 'worker'
         env:
           CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
