--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -9,5 +9,5 @@ workers_dev = true
 compatibility_date = "2021-10-10"
 webpack_config = "webpack.config.js"
 kv_namespaces = [ 
-  { binding = "SUPAFLARE", id = "YOUR_NAMESPACE_ID" }
+  { binding = "SUPAFLARE", id = "a8c50e7240f143d684344706b7c582e5" }
 ]
