Add admin manual worker update

--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -29,7 +29,11 @@ jobs:
           secrets: |
             SUPABASE_URL
             SUPABASE_API_KEY
+            SUPABASE_JWT_SECRET
+            SUPAFLARE_ADMIN_KEY
         env:
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+          SUPABASE_JWT_SECRET: ${{ secrets.SUPABASE_JWT_SECRET }}
+          SUPAFLARE_ADMIN_KEY: ${{ secrets.SUPAFLARE_ADMIN_KEY }}
