Shift patch-package to root Fixes #15

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
 		"./worker"
 	],
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
+  },
+  "scripts": {
+    "postinstall": "patch-package"
   }
 }
