--- a/app/package.json
+++ b/app/package.json
@@ -12,29 +12,29 @@
 		"format": "prettier .  --write"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^1.24.0",
+		"@supabase/supabase-js": "^1.35.6",
 		"axios": "^0.22.0",
-		"core-js-pure": "^3.18.2",
-		"nanoid": "^3.1.29",
-		"pinia": "^2.0.0-rc.12",
+		"core-js-pure": "^3.25.1",
+		"nanoid": "^3.3.4",
+		"pinia": "^2.0.22",
 		"vue": "^3.2.16",
-		"vue-router": "^4.0.11"
+		"vue-router": "^4.1.5"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
 		"@vicons/fa": "^0.11.0",
-		"@vitejs/plugin-vue": "^1.9.3",
+		"@vitejs/plugin-vue": "^1.10.2",
 		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-html": "^6.2.0",
-		"eslint-plugin-vue": "^7.19.1",
-		"naive-ui": "^2.19.5",
+		"eslint-plugin-vue": "^7.20.0",
+		"naive-ui": "^2.33.3",
 		"prettier": "2.4.1",
-		"sass": "^1.42.1",
-		"typescript": "^4.4.3",
+		"sass": "^1.54.9",
+		"typescript": "^4.8.3",
 		"vfonts": "^0.1.0",
-		"vite": "^2.9.13",
-		"vue-tsc": "^0.3.0"
+		"vite": "^3.1.1",
+		"vue-tsc": "^0.40.13"
 	}
 }
