--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,13 +1,12 @@
 name = "supaflare-worker"
-type = "webpack"
+main = 'index.js'
+usage_model = 'bundled'
 route = ''
 account_id = ''
 zone_id = ''
-usage_model = ''
 compatibility_flags = []
 workers_dev = true
 compatibility_date = "2021-10-10"
-webpack_config = "webpack.config.js"
 kv_namespaces = [ 
-  { binding = "SUPAFLARE", id = "98356e6b44844e0ca920efd23d348f74" }
+  { binding = "SUPAFLARE", id = "98356e6b44844e0ca920efd23d348f74", preview_id = "78c8caceaf6b4228aea01f725ef70527" }
 ]
