Update wrangler config

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,12 +1,9 @@
 name = "supaflare-worker"
 main = 'index.js'
 usage_model = 'bundled'
-route = ''
-account_id = ''
-zone_id = ''
 compatibility_flags = []
 workers_dev = true
 compatibility_date = "2021-10-10"
-kv_namespaces = [ 
-  { binding = "SUPAFLARE", id = "98356e6b44844e0ca920efd23d348f74", preview_id = "78c8caceaf6b4228aea01f725ef70527" }
+kv_namespaces = [
+  { binding = "SUPAFLARE", id = "98356e6b44844e0ca920efd23d348f74", preview_id = "78c8caceaf6b4228aea01f725ef70527" },
 ]
